# KML-VIrusWGS

./: .gitignore  README.md  main.py  pyproject.toml
config/: conda.yaml
kml_viruswgs/: __init__.py  config.py  fastq.py  snakemake.py
templates/: input.tsv  run.sh  snakemake.yaml
tests/: test_config.py  test_fastq.py  test_snakemake.py
wf-viruswgs/: Snakefile
wf-viruswgs/rules/: align.smk  consensus.smk  depth.smk  fastp.smk  fastqc.smk  find.smk  multiqc.smk  summary.smk  type.smk  variant.smk
wf-viruswgs/schemas/: config.schema.yaml
wf-viruswgs/scripts/: concat_summary.py  depth_plot.py  depth_stats.py  fastp_all_samples_qc.py  summary_table.py  vcf2table.py  virus_type.py
