[tool.poetry]
name = "kml-viruswgs"
version = "0.1.0"
description = ""
authors = ["kristoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
pytest = "^8.3.4"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/test_fastq.py",
    "tests/test_config.py",
    "tests/test_snakemake.py",
]
